# homelab-inventory

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKERHUB.md  Dockerfile  LICENSE  README.md  SECURITY.md  build.sh  docker-compose.example.yml  index.html  package.json  tsconfig.app.json  vite.config.ts
.github/: pull_request_template.md
docs/: DATA.md  DEVELOPMENT.md  DOCKER.md  RELEASES.md
rust/: Cargo.toml
rust/crates/domain-core/: Cargo.toml
rust/crates/domain-core/benches/: phase1.rs
rust/crates/domain-core/src/: lib.rs
rust/crates/engine-wasm/: Cargo.toml
rust/crates/engine-wasm/src/: lib.rs
rust/crates/geometry/: Cargo.toml
rust/crates/geometry/src/: lib.rs
rust/crates/protocol/: Cargo.toml
rust/crates/protocol/src/: lib.rs
rust/crates/routing/: Cargo.toml
rust/crates/routing/src/: lib.rs
rust/crates/topology/: Cargo.toml
rust/crates/topology/src/: lib.rs
scripts/: benchmark-engine.mjs  build-wasm.mjs  build-wasm.test.mjs  check-release-notes.mjs  check-release-notes.test.mjs  dev-wasm.mjs  dev-wasm.test.mjs  historical-release-map.mjs  historical-release-map.test.mjs  migrate-category-array-inventory.mjs  migrate-persisted-numeric-ids.mjs  prepare-historical-runtime.mjs  prepare-historical-runtime.test.mjs  release-plan.mjs  release-plan.test.mjs  verify-published-image.mjs  verify-published-image.test.mjs  verify-wasm-runtime.mjs  verify-wasm-runtime.test.mjs
server/: agent-routes.mjs  agent-routes.test.mjs  engine-routes.mjs  engine-routes.test.mjs  index.mjs  (+13 more)
(+273 files in other folders)
