[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.94.1"

[workspace.dependencies]
postcard = { version = "1.1.3", features = ["alloc"] }
postcard-bindgen = { version = "0.7.1", features = ["alloc"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1"
thiserror = "2"
