[package]
name = "homelab-domain-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
homelab-engine-protocol = { path = "../protocol" }
homelab-geometry = { path = "../geometry" }
homelab-routing = { path = "../routing" }

[dev-dependencies]
rmp-serde.workspace = true

[[bench]]
name = "phase1"
harness = false
